samples/_failures_safe/1761206520_6253a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46e39fa9.c: In function ‘main’:
./samples/SAFE/__tmp_46e39fa9.c:170:16: error: missing terminating " character
  170 |         printf("\nCompression/decompression successful
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_46e39fa9.c:170:9: error: expected expression at end of input
  170 |         printf("\nCompression/decompression successful
      |         ^~~~~~
./samples/SAFE/__tmp_46e39fa9.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46e39fa9.c:170:9: error: expected declaration or statement at end of input
